--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-python-dotenv==1.0.0
-spotipy==2.23.0
-anthropic==0.8.0
-pytest==7.4.3 
+python-dotenv>=1.0.0
+spotipy>=2.23.0
+anthropic>=0.8.0
+pytest>=7.4.3
+rich>=13.0.0
+typer>=0.9.0
+pydantic>=2.0.0
+openai>=1.12.0 
