--- a/.env-template
+++ b/.env-template
@@ -1,4 +1,6 @@
 SPOTIFY_CLIENT_ID=your_client_id_here
 SPOTIFY_CLIENT_SECRET=your_client_secret_here
 SPOTIFY_REDIRECT_URI=http://localhost:8888/callback
-LLM_API_KEY=your_llm_api_key_here 
+OPENAI_API_KEY=your_llm_api_key_here 
+ANTHROPIC_API_KEY=your_anthropic_key
+LLM_PROVIDER=anthropic
